# ai-council

./: .env.sample  .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
config/: README.md  council.yaml
scripts/: clean_memory.py
src/agent/: __init__.py  agent.py  llm.py  response.py
src/agent/impl/: GeminiLLM.py  OllamaLLM.py  OpenAILLM.py
src/config/: __init__.py  council_config.py
src/council/: README.md  __init__.py  council.py  round_runner.py
src/forum/: __init__.py  forum.py  whisper.py
src/memory/: README.md  __init__.py  agent_memory.py  long_term.py  short_term.py
src/personality/: __init__.py  personality.py
src/tool/: __init__.py  tool.py  tool_registry.py
src/tool/impl/: broadcast_tool.py  history_tool.py  search_tool.py  whisper_tool.py
